; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_function.c_t3.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_function.c_t3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32, i32, i32)* @t3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @t3(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @expect(i32 1, i32 %13)
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @expect(i32 2, i32 %15)
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @expect(i32 3, i32 %17)
  %19 = load i32, i32* %10, align 4
  %20 = call i32 @expect(i32 4, i32 %19)
  %21 = load i32, i32* %11, align 4
  %22 = call i32 @expect(i32 5, i32 %21)
  %23 = load i32, i32* %12, align 4
  %24 = call i32 @expect(i32 6, i32 %23)
  ret void
}

declare dso_local i32 @expect(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
